sfdx-source/force-app/main/default/objects/Opportunity_Brand_Relationship__c/Opportunity_Brand_Relationship__c.object-meta.xml
<CustomObject>
    <description>LEM-3607: It captures the relationship between Opportunity and Brands associated with common Accounts.</description>
    <label>Opportunity Brand Relationship</label>
    <nameField>
        <displayFormat>OBR-{0}</displayFormat>
        <label>Opportunity Brand Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Brand Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>