sfdx-source/force-app/main/default/objects/Opportunity_Brand_Relationship__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>LEM-3607: It indicates the Brand in an Opportunity Brand Relationship.</description>
    <label>Brand</label>
    <referenceTo>Brand_Association__c</referenceTo>
    <relationshipLabel>Opportunity Brand Relationships</relationshipLabel>
    <relationshipName>Opportunity_Brand_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>