sfdx-source/force-app/main/default/objects/Opportunity_Brand_Relationship__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>LEM-3607: It indicates the Opportunity in an Opportunity Brand Relationship.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Brand Relationships</relationshipLabel>
    <relationshipName>Opportunity_Brand_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>